@@ -3,7 +3,7 @@
  * CGIUTILS.C - Common utilities for Nagios CGIs
  * 
  * Copyright (c) 1999-2008 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 01-24-2008
+ * Last Modified: 02-03-2008
  *
  * License:
  *
@@ -1347,15 +1347,15 @@ char *mmap_fgets_multiline(mmapfile *temp_mmapfile){
 			end=len-1;
 
 		/* two backslashes found, so unescape first backslash first and break */
-		if(end>=2 && buf[end-2]=='\\' && buf[end-1]=='\\'){
-			buf[end-1]='\n';
-			buf[end]='\x0';
+		if(end>=1 && buf[end-1]=='\\' && buf[end]=='\\'){
+			buf[end]='\n';
+			buf[end+1]='\x0';
 			break;
 			}
 
 		/* one backslash found, so we should continue reading the next line */
-		else if(end>=1 && buf[end-1]=='\\')
-			buf[end-1]='\x0';
+		else if(buf[end]=='\\')
+			buf[end]='\x0';
 
 		/* else no continuation marker was found, so break */
 		else
